Bug 337859 Firefox windows open very small initially, then expand to regular size r+sr=roc